# xmobar

./: .gitignore  .gitmodules  build  cabal.project  stack.yaml  xmobar-config.cabal  xmobar.hs  xmobarrc.bak
scripts/: cava_config  cavabar  cavamap  cavamap.c  getmute  getvol
xpm/: batt.xpm  bright.xpm  calendar.xpm  cpu.xpm  floats.xpm  grid.xpm  haskell.xpm  ram.xpm  tall.xpm  vol-off.xpm  vol.xpm  wifi.xpm
